# voxpaste-local

./: .gitignore  LICENSE  README.md  config.example.json  pyproject.toml  requirements.txt  voxpaste.py
docs/: project-brief.md  project-brief.zh-CN.md
scripts/: detect_key.py  detect_mouse.py  run_format_tests.py
tests/fixtures/: pause_cases.json  zh_speech_cases.json
